@@ -1,6 +1,7 @@
 package me.yarinlevi.waypoints.waypoint;
 
 import lombok.Getter;
+import org.jetbrains.annotations.Nullable;
 
 import java.util.Arrays;
 import java.util.List;
@@ -9,14 +10,15 @@ import java.util.List;
  * @author YarinQuapi
  */
 public enum WaypointWorld {
-    NORMAL("Overworld", Arrays.asList("overworld", "normal")),
-    NETHER("The Nether", Arrays.asList("nether", "thenether")),
-    THE_END("The End", Arrays.asList("end", "theend"));
+    ALL("All", List.of()),
+    NORMAL("Overworld", List.of("overworld", "normal")),
+    NETHER("The Nether", List.of("nether", "thenether")),
+    THE_END("The End", List.of("end", "theend"));
 
     @Getter String name;
-    @Getter List<String> keys;
+    @Nullable @Getter List<String> keys;
 
-    WaypointWorld(String name, List<String> keys) {
+    WaypointWorld(String name, @Nullable List<String> keys) {
         this.name = name;
         this.keys = keys;
     }
